--- a/gitprac/web/index.html
+++ b/gitprac/web/index.html
@@ -5,6 +5,12 @@
 <title>Insert title here</title>
 </head>
 <body>
-	abcdefg
+	나수정나수정
+	나수정나수정
+	나수정나수정
+	나수정나수정
+	나수정나수정
+	나수정나수정
+	나수정나수정
 </body>
 </html>
